# NoteBooks

./: .gitmodules  daily_record.md
4/: 4.md  magic.md
C++/: C++.md  GoruOfTheWeek.md  HPC.md  Linux多线程服务器编程.md  SoftwareEngineeringAtGoogle.md  assembly.md  cppcon.md  cppcon2014-2016.md  ddia.md  leetcode.md  template.md  tmp.md  面试check.md
C++/concurrency/: concurrency.md
C++/cppcon2017/: cppcon-2017.md
C++/cppcon2018/: cppcon-2018.md
algorithm/: algorithm.md  挑战程序设计竞赛.md
awk/: .The AWK Programming Language.pdf.icloud  awk.md
bitcoid&chain/: bitcoid.md
deep_learning/: deep_learning.md
engineering/: .2022年Q3季度02.jpg.icloud  Sre.md  architecture.md  engineering.md  perf.md  redis.md
engineering/Client/: .libmtbodypose-config.cmake.icloud  CMakeLists.txt  ReadMe.md  build.sh  libmtbodypose-config.cmake  main.cpp  setup_dependency.sh
engineering/Client/shared_files/: .setup_dependency.bat.icloud  UpdateBuildGradleVersion.sh  setup_dependency.bat  setup_dependency.sh
engineering/Client/shared_files/android_shared_files/: AndroidAssetFileHelper.cpp  AndroidAssetFileHelper.hpp  BitmapHelper.cpp  BitmapHelper.h  BitmapUtil.cpp  BitmapUtil.hpp  JavaHelper.cpp  JavaHelper.h  mtegl.cpp  mtegl.h
engineering/Client/shared_files/cmake/: .eigen-config.cmake.icloud  .libManis-config.cmake.icloud  .libbase-config.cmake.icloud  .libglew-config.cmake.icloud  .libmtcvlite-config.cmake.icloud  .libmtimage-config.cmake.icloud  .libmtnn-config.cmake.icloud  .libopencv-config.cmake.icloud  .libopencv-demo-config.cmake.icloud  .libphoto_detector-config.cmake.icloud  .libyuv-config.cmake.icloud  eigen-config.cmake  libManis-config.cmake  libbase-config.cmake  libglew-config.cmake  libmtcvlite-config.cmake  libmtimage-config.cmake  libmtnn-config.cmake  libopencv-config.cmake  libopencv-demo-config.cmake  libphoto_detector-config.cmake  libyuv-config.cmake
engineering/Client/shared_files/headers/: MTBeijingSdkDefine.h  MTDebuggerHelper.hpp  MTSegmentLogicDefine.h  MTSegmentLogicLog.h
engineering/Client/shared_files/iOS_demo_files/: .SdkDev-Info.plist.icloud  AppDelegate.h  AppDelegate.m  SdkDev-Info.plist  SdkDev-Prefix.pch  UIImage+ImageData.h  UIImage+ImageData.m  UIImage+cdata.h  UIImage+cdata.m  ViewController.h  main.m
engineering/Client/shared_files/iOS_demo_files/debug/: debug_helper.h  debug_helper.mm
engineering/Client/shared_files/iOS_demo_files/en.lproj/: ViewController.xib
engineering/Client/shared_files/src/: MTBeijingSdkImageHelper.cpp  MTBeijingSdkImageHelper.hpp  MTManisHelper.cpp  MTManisHelper.hpp
engineering/sdk_build/: .Win_build2017.bat.icloud  .iOS.cmake.icloud  .vswhere.exe.icloud  CMakeLists.txt  Show3rdpartyVersion.sh  Win_build2017.bat  android_build.sh  android_static_noJni_build.sh  centos_build.sh  iOS.cmake  iOS_build.sh  macOS_build.sh  mtphone_build.sh
engineering/setup new mac/: setup_new_mac.md
flink/: flink.md
frame/: .frames.md.icloud
gl/: gl.md
keys/: .vim_cheat_sheet_for_programmers_print.png.icloud  keys.md
llm/: llm.md
math_like/: math_like.md
math_like/组合数学/: 组合数学.md
miscellaneous/daily/: daily202011.md  daily202101.md  daily202103.md  daily202105.md  daily202107.md  daily202109.md  daily202111.md  daily202201.md  daily202203.md  daily202205.md  daily202207.md  daily202209.md  daily202211.md  daily202301.md  daily202303.md
miscellaneous/daily/2021/: .image-20211119202103170.png.icloud
multi_thread/: multi_thread.md
pdf/软件调试的艺术/: .The Art of Debuggin with GDB DDD and Eclipse.pdf.icloud  .软件调试的艺术.pdf.icloud
rpc/: Wireshark.md  rpc&networkProgramming.md  trpc.md
rust/: rust.md
thought/: social_engineering.md  thought.md  宝石加工工艺.md
tmp/: to_read.md  格式.md
快捷键/: 快捷键.md
